# image-scaler

./: .gitignore  CMakeLists.txt  README.md  build.zig  compile.sh  compile_commands.json  install.sh  run_example.sh
src/: bicubic_interpolation.h  color_space_conversion.h  main.cpp  pretrained_weights_biases.h  stb_image.h  stb_image_write.h  super_resolution_cnn.h
